# wedding-app

./: .env  .gitignore  Cargo.toml  Dockerfile  main.py  mvnw.cmd  next.config.ts  package-lock.json  package.json  pom.xml  requirements.txt
Files-Upload/: 2901caa9-1be7-4e32-8162-16783e0cdfff  3e4834ae-bc13-4bd0-8eb0-e1725fbe3b82  642f9e51-d3cb-4445-9a06-e6654fcc14f6  8883d58d-9941-48c6-891e-ab07991e124d  b62d18da-61d9-4f2c-a179-5b950dc1db52  d857e8d5-b6f5-4c1d-981a-0df67b0b153c
public/: service-worker.js
src/: main.rs  router.rs
src/app/: layout.tsx  page.tsx
src/app/auth/: layout.tsx  page.tsx
src/app/auth/login/: page.tsx
src/app/components/: About.tsx  ChatbotButton.tsx  Countdown.tsx  FlowerEffect.tsx  Footer.tsx  Gallery.tsx  GalleryUpdate.module.css  GalleryUpdate.tsx  Game.tsx  Header.tsx  Hero.tsx  Pagination.tsx  ScrollToTopButton.tsx  Sidebar.tsx  Wish.tsx
src/app/dashboard/: layout.tsx
src/app/dashboard/galleries/: GalleryManagement.tsx  page.tsx
src/app/dashboard/stories/: page.tsx
src/app/dashboard/wishes/: page.tsx
src/app/gallery/: page.tsx
src/app/stories/: page.tsx
src/app/styles/: globals.css
src/app/wishes/: page.tsx
src/enums/: routes.rs
src/features/file/: handler.rs  model.rs  routes.rs
src/main/java/com/dan/wedding/: WeddingApplication.java
src/main/resources/: application.properties  application.yml
src/services/: auth.ts  chat.ts  gallery.ts  gallery.tsx  push.ts  story.ts  wish.ts
src/test/java/com/dan/wedding/: WeddingApplicationTests.java
uploads/: 32f0bcc6-1f41-4a59-9f27-fd5b456493e6
(+52 files in other folders)
