[package]
name = "file-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", default-features = true, features = ["multipart"] }
serde ={ version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mongodb = "3.2.1"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
futures-util = "0.3"
mime_guess = "2.0"